--- a/DjangoClase-main/newPage/templates/pages/creacion_user.html
+++ b/DjangoClase-main/newPage/templates/pages/creacion_user.html
@@ -66,7 +66,7 @@
             <center>
               <form action="{% url 'creacion_user' %}" method="POST">
                 {% csrf_token %}
-                <img src="{% static 'img/img/Venom.jpg' %}" class='img-thumbnail w-25 h-25 rounded-circle mb-3'><br>
+                <img src="{% static 'img/Venom.jpg' %}" class='img-thumbnail w-25 h-25 rounded-circle mb-3'><br>
                 <div>
                     <label for="username" class="form-label col-md-6">Nombre Usuario</label>
                     <input type="text" name="username" id="username" class="form-control">
