--- a/DjangoClase-main/newPage/templates/pages/inicio_sesion.html
+++ b/DjangoClase-main/newPage/templates/pages/inicio_sesion.html
@@ -67,7 +67,7 @@
             <form action="" method='POST'>
                 <br>
                 {% csrf_token %}
-                <img src="{% static 'img/img/Spiderman.jpg' %}"
+                <img src="{% static 'img/Spiderman.jpg' %}"
                  class='img-thumbnail w-25 h-25 rounded-circle mb-3'><br>
                 <label for="username" class='form-label'>Nombre Usuario</label>
                 <input type="text" class='form-control' name='username' id='username'
