--- a/DjangoClase-main/newPage/templates/pages/Re4.html
+++ b/DjangoClase-main/newPage/templates/pages/Re4.html
@@ -61,11 +61,10 @@
           <img src="{%static 'img/img/Re4.jpg'%}" width="200" height="250" class="img-thumbnail w-50 m-auto" />
         </div>
         <div class="col-md-2">
-          <h2>Resident Evil 4</h2>
-          <p>37.000clp</p>
-          <p2 style="text-align: center"> Resident Evil 4 conserva la esencia del juego original.</p2>
+          <h2>Bicicleta Cannondale Trail 5 Aro 29 2022</h2>
+          <p>549.990 CLP</p>
           <br />
-          <button class="bg-success border-2">Comprar</button>
+          <button class="btn btn-primary mt-3">Comprar</button>
         </div>
         <br />
         <div class="col-6">
@@ -84,15 +83,15 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
-                  <img src="{% static 'img/img/img1.jpg'%}" class="d-block w-100 imagenesre4" alt="..." />
+                  <img src="{% static 'img/Bici1.png'%}" class="d-block w-100 imagenesre4" alt="..." />
                   <div class="carousel-caption d-none d-md-block"></div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                  <img src="{% static 'img/img/img 2.jpg'%}" class="d-block w-100 imagenesre4" alt="..." />
+                  <img src="{% static 'img/Bici1_2.png'%}" class="d-block w-100 imagenesre4" alt="..." />
                   <div class="carousel-caption d-none d-md-block"></div>
                 </div>
                 <div class="carousel-item">
-                  <img src="{%static 'img/img/img3.jpg'%}" class="d-block w-100 imagenesre4" alt="..." />
+                  <img src="{% static 'img/Bici1_3.png'%}" class="d-block w-100 imagenesre4" alt="..." />
                   <div class="carousel-caption d-none d-md-block"></div>
                 </div>
               </div>
@@ -104,7 +103,7 @@
     </div>
 
     <div class="DescripcionRe4">
-      <h2>Resident Evil 4</h2>
+      <h2>Descripcion</h2>
       <p>
         Disfruta del remake del juego de survival horror que cambió por completo el género. Resident Evil 4, adaptado a
         las consolas y PC modernos con gráficos y mecánicas de juego renovados, te lleva de vuelta a un remoto pueblo
