--- a/DjangoClase-main/newPage/templates/pages/Re4.html
+++ b/DjangoClase-main/newPage/templates/pages/Re4.html
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="{%url 'home'%}"
-          ><img src="{% static  'img/img/logo3.jpg' %}" alt="" width="120px" height="80px"
+          ><img src="{% static  'img/logo.png' %}" alt="" width="190px" height="80px"
         /></a>
         <button
           class="navbar-toggler"
@@ -87,7 +87,7 @@
                   <div class="carousel-caption d-none d-md-block"></div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                  <img src="{% static 'img/Bici1_2.png'%}" class="d-block w-100 imagenesre4" alt="..." />
+                  <img src="{% static 'img/Bici1_2.jpg'%}" class="d-block w-100 imagenesre4" alt="..." />
                   <div class="carousel-caption d-none d-md-block"></div>
                 </div>
                 <div class="carousel-item">
