--- a/DjangoClase-main/newPage/templates/pages/tokens.html
+++ b/DjangoClase-main/newPage/templates/pages/tokens.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="{%url 'home'%}"
-          ><img src="{% static  'img/img/logo3.jpg' %}" alt="" width="120px" height="80px"
+          ><img src="{% static  'img/logo.png' %}" alt="" width="190px" height="80px"
         /></a>
         <button
           class="navbar-toggler"
