--- a/DjangoClase-main/newPage/templates/pages/FH5.html
+++ b/DjangoClase-main/newPage/templates/pages/FH5.html
@@ -105,7 +105,7 @@
       </div>
     </div>
 
-    <div class="DescripcionRe4">
+    <div class="DescripcionRe4 col-2 col-md-9">
       <h2>Forza Horizon 5</h2>
       <p>
         Explora los vibrantes paisajes del mundo abierto de México y disfruta de una diversión sin límites al volante de
