--- a/DjangoClase-main/newPage/templates/pages/GOW.html
+++ b/DjangoClase-main/newPage/templates/pages/GOW.html
@@ -104,7 +104,7 @@
       </div>
     </div>
 
-    <div class="DescripcionRe4">
+    <div class="DescripcionRe4 col-2 col-md-9">
       <h2>God of War</h2>
       <p>
         Kratos ha dejado atrás su venganza contra los dioses del Olimpo y vive ahora como un hombre en los dominios de
