--- a/DjangoClase-main/newPage/templates/pages/HK.html
+++ b/DjangoClase-main/newPage/templates/pages/HK.html
@@ -111,7 +111,7 @@
     </div>
 
     <!-- cambiar la descricion del juego xdxdxdx -->
-    <div class="DescripcionRe4">
+    <div class="DescripcionRe4 col-2 col-md-9">
       <h2>Hollow Knight</h2>
       <p>
         Hollow Knight es una aventura de acción clásica en 2D ambientada en un vasto mundo interconectado. Explora
