--- a/DjangoClase-main/newPage/templates/pages/KTN.html
+++ b/DjangoClase-main/newPage/templates/pages/KTN.html
@@ -106,7 +106,7 @@
       </div>
     </div>
 
-    <div class="DescripcionRe4">
+    <div class="DescripcionRe4 col-2 col-md-9">
       <h2>Katana Zero</h2>
       <p>
         Usa tu espada, corre y manipula el tiempo para desvelar tu pasado en un despliegue acrobático brutalmente
