--- a/DjangoClase-main/newPage/templates/pages/Re4.html
+++ b/DjangoClase-main/newPage/templates/pages/Re4.html
@@ -102,7 +102,7 @@
       </div>
     </div>
 
-    <div class="DescripcionRe4">
+    <div class="DescripcionRe4 col-2 col-md-9">
       <h2>Descripcion</h2>
       <p>
         Disfruta del remake del juego de survival horror que cambió por completo el género. Resident Evil 4, adaptado a
