--- a/DjangoClase-main/newPage/templates/pages/FH5.html
+++ b/DjangoClase-main/newPage/templates/pages/FH5.html
@@ -67,7 +67,7 @@
             >Forza Horizon Conquista la escarpada Sierra Nueva en la experiencia definitiva del rally de Horizon..</p2
           >
           <br />
-          <button class="bg-success border-2">Comprar</button>
+          <button class="btn btn-primary mt-3">Comprar</button>
         </div>
         <br />
         <div class="col-6">
