--- a/DjangoClase-main/newPage/templates/pages/GOW.html
+++ b/DjangoClase-main/newPage/templates/pages/GOW.html
@@ -104,7 +104,7 @@
       </div>
     </div>
 
-    <div class="DescripcionRe4 col-2 col-md-9">
+    <div class="DescripcionRe4 col-2 col-md-9  justify-content-between">
       <h2>God of War</h2>
       <p>
         Kratos ha dejado atrás su venganza contra los dioses del Olimpo y vive ahora como un hombre en los dominios de
@@ -119,7 +119,7 @@
         aria-controls="more-info">
         Ver más
       </button>
-      <div class="collapse" id="more-info">
+      <div class="collapse  justify-content-between" id="more-info">
         <h3>Características del juego God of War</h3>
         <ul>
           <li>
