--- a/DjangoClase-main/newPage/templates/pages/HK.html
+++ b/DjangoClase-main/newPage/templates/pages/HK.html
@@ -65,7 +65,7 @@
           <p>8.000clp</p>
           <p2 style="text-align: center">Enfréntate a las profundidades de un reino olvidado.</p2>
           <br />
-          <button class="bg-success border-2">Comprar</button>
+          <button class="btn btn-primary mt-3">Comprar</button>
         </div>
         <br />
         <div class="col-6">
