--- a/DjangoClase-main/newPage/templates/pages/KTN.html
+++ b/DjangoClase-main/newPage/templates/pages/KTN.html
@@ -68,7 +68,7 @@
             muerte instantánea.</p2
           >
           <br />
-          <button class="bg-success border-2">Comprar</button>
+          <button class="btn btn-primary mt-3">Comprar</button>
         </div>
         <br />
         <div class="col-6">
