--- a/DjangoClase-main/newPage/templates/pages/Re4.html
+++ b/DjangoClase-main/newPage/templates/pages/Re4.html
@@ -57,17 +57,16 @@
     <br />
     <div class="container3">
       <div class="row">
-        <div class="col-3">
-          <img src="{%static 'img/img/Re4.jpg'%}" width="200" height="250" class="img-thumbnail w-50 m-auto" />
-        </div>
-        <div class="col-md-2">
-          <h2>Bicicleta Cannondale Trail 5 Aro 29 2022</h2>
+        <div class="col-6">
+          <br />
+          <h2>Bicicleta Cannondale</h2>
+          <h2>Trail 5 Aro 29 2022</h2>
           <p>549.990 CLP</p>
           <br />
           <button class="btn btn-primary mt-3">Comprar</button>
         </div>
         <br />
-        <div class="col-6">
+        <div class="col-5">
           <center>
             <div id="CarruselRe4" class="carousel carousel-dark slide-1">
               <div class="carousel-indicators">
@@ -105,47 +104,11 @@
     <div class="DescripcionRe4 col-2 col-md-9">
       <h2>Descripcion</h2>
       <p>
-        Disfruta del remake del juego de survival horror que cambió por completo el género. Resident Evil 4, adaptado a
-        las consolas y PC modernos con gráficos y mecánicas de juego renovados, te lleva de vuelta a un remoto pueblo
-        europeo infectado por el parásito que controla la mente: Las Plagas. Tras los remakes de RE2 y RE3, Capcom nos
-        ofrece otro remake de un juego clásico. Si nunca has jugado al RE4 original, el Resident Evil 4 Código de Steam
-        es una forma perfecta de experimentar uno de los mejores juegos, si no el mejor, de la serie Resident Evil.
+        Una rígida ruda con transmisión 1x10 y horquilla de 100mm, construida
+        para subir tu nivel y desarrollar tu pasión por los senderos. Diseñada
+        para las montañas, para cualquier cosa
       </p>
-      <button
-        class="btn btn-primary mt-3"
-        data-bs-toggle="collapse"
-        data-bs-target="#more-info"
-        aria-expanded="false"
-        aria-controls="more-info">
-        Ver más
-      </button>
-      <div class="collapse" id="more-info">
-        <h3>Características del juego Resident Evil 4</h3>
-        <ul>
-          <li>
-            Nueva capa de pintura. El remake de Resident Evil 4 tiene un aspecto fenomenal con gráficos, iluminación y
-            sombras renovados;
-          </li>
-          <li>
-            Nuevo pero familiar. Leon todavía puede dar patadas en la cara a los enemigos, pero ahora puede parar los
-            ataques enemigos con un cuchillo y tiene algunos trucos más en la manga;
-          </li>
-          <li>
-            La esencia de RE4. Con gráficos y jugabilidad modernizados, el remake de RE4 conserva la esencia del
-            original;
-          </li>
-          <li>Nuevas secuencias. El remake de RE4 cuenta con una historia y secuencias de juego nuevas y ampliadas;</li>
-          <li>Resident Evil 4 al mejor precio.</li>
-        </ul>
-        <p>
-          Una clase magistral de survival-horror. Cuando se lanzó por primera vez en 2005, Resident Evil 4 redefinió por
-          completo el género del survival-horror. Ahora puedes disfrutar de uno de los mejores juegos de la serie. Seis
-          años después del brote en Racoon City, Leon Kennedy recibe el encargo de encontrar a la hija del Presidente de
-          los Estados Unidos. La búsqueda lleva a Leon a un pequeño pueblo rural europeo donde una nueva amenaza se ha
-          apoderado de la población local y la ha infectado. Compra Resident Evil 4 Código de Steam, y enfréntate a los
-          terroríficos enemigos en tu misión de encontrar a quien secuestró a la hija del Presidente.
-        </p>
-      </div>
+      
     </div>
   </body>
 </html>
