--- a/DjangoClase-main/newPage/templates/pages/catalogo.html
+++ b/DjangoClase-main/newPage/templates/pages/catalogo.html
@@ -58,10 +58,10 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card ">
-            <a href="{%url 're4'%}"><img src="{% static 'img/img/Re4.jpg'%}" class="img-thumbnail w-75 m-auto " alt="..." ></a>
+            <a href="{%url 're4'%}"><img src="{% static 'img/Bici1.png'%}" class="img-thumbnail w-auto m-auto " alt="..." ></a>
             <div class="card-body">
-              <h5 class="card-title">Resident Evil 4</h5>
-              <p class="card-text">$37.000CLP</p>
+              <h5 class="card-title">Bicicleta Cannondale</h5>
+              <p class="card-text">$549.990 CLP</p>
               <a class="btn btn-primary" href="{%url 're4'%}" role="button">Comprar</a>
             </div>
           </div>
