--- a/DjangoClase-main/newPage/templates/pages/Re4.html
+++ b/DjangoClase-main/newPage/templates/pages/Re4.html
@@ -106,12 +106,12 @@
       <p>
         Una rígida ruda con transmisión 1x10 y horquilla de 100mm, construida para subir tu nivel y desarrollar tu pasión por los senderos. Diseñada para las montañas, para cualquier cosa.
       </p>
-      <button class="btn btn-primary mt-3" id="ver-mas" onclick="verMas()">Ver más</button>
+      <button class="btn btn-primary mt-3 mx-auto" id="ver-mas" onclick="verMas()">Ver más</button>
       <div class="collapse" id="expand-description">
         <p>
           Esta bicicleta está lista para enfrentar cualquier terreno y desafío que se presente. Con su transmisión de 1x10, tendrás un amplio rango de cambios para adaptarte a diferentes condiciones. La horquilla de 100mm te brinda la suspensión necesaria para absorber los impactos y mantener la tracción en los senderos más difíciles. No importa si eres un ciclista experimentado o estás empezando en el mundo del mountain bike, esta bicicleta te acompañará en todas tus aventuras.
         </p>
-        <button class="btn btn-primary mt-3" id="ver-menos" onclick="verMenos()">Ver menos</button>
+        <button class="btn btn-primary mt-3 mx-auto" id="ver-menos" onclick="verMenos()">Ver menos</button>
       </div>
     </div>
     
@@ -124,9 +124,9 @@
       }
     
       function verMenos() {
+        document.getElementById("ver-menos").style.display = "none";
         document.getElementById("ver-mas").style.display = "block";
         document.getElementById("expand-description").classList.remove("show");
-        document.getElementById("ver-menos").style.display = "none";
       }
     </script>
   </body>
