--- a/DjangoClase-main/newPage/templates/pages/KTN.html
+++ b/DjangoClase-main/newPage/templates/pages/KTN.html
@@ -57,16 +57,9 @@
     <br />
     <div class="container3">
       <div class="row">
-        <div class="col-3">
-          <img src="{%static 'img/img/katanazero.jpg'%}" width="200" height="250" class="img-thumbnail w-50 m-auto" />
-        </div>
-        <div class="col-md-2">
-          <h2>Katana Zero</h2>
-          <p>$5.500CLP</p>
-          <p2 style="text-align: center"
-            >Katana Zero acción y plataformas neo-noir rebosante de personalidad, acción vertiginosa y combates de
-            muerte instantánea.</p2
-          >
+        <div class="col-6">
+          <h2>BICICLETA INFANTIL ARO 16 SNOWY</h2>
+          <p>$75.990CLP</p>
           <br />
           <button class="btn btn-primary mt-3">Comprar</button>
         </div>
@@ -87,15 +80,15 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
-                  <img src="{%static 'img/img/katanazerocarrusel1.jpg'%}" class="d-block w-100 imagenesre4" alt="..." />
+                  <img src="{%static 'img/Bici3.png'%}" class="d-block w-100 imagenesre4" alt="..." />
                   <div class="carousel-caption d-none d-md-block"></div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                  <img src="{%static 'img/img/katanazerocarrusel2.jpg'%}" class="d-block w-100 imagenesre4" alt="..." />
+                  <img src="{%static 'img/Bici3_2.png'%}" class="d-block w-100 imagenesre4" alt="..." />
                   <div class="carousel-caption d-none d-md-block"></div>
                 </div>
                 <div class="carousel-item">
-                  <img src="{%static 'img/img/katanazerocarrusel3.jpg'%}" class="d-block w-100 imagenesre4" alt="..." />
+                  <img src="{%static 'img/Bici3_3.png'%}" class="d-block w-100 imagenesre4" alt="..." />
                   <div class="carousel-caption d-none d-md-block"></div>
                 </div>
               </div>
