--- a/DjangoClase-main/newPage/templates/pages/catalogo.html
+++ b/DjangoClase-main/newPage/templates/pages/catalogo.html
@@ -68,20 +68,20 @@
         </div>
         <div class="col">
           <div class="card ">
-            <a href="{%url 'hk'%}"><img src="{% static 'img/img/hollow.jpg'%}" class="img-thumbnail w-75 m-auto " alt="..."></a>
+            <a href="{%url 'hk'%}"><img src="{% static 'img/Bici2_3.png'%}" class="img-thumbnail w-auto m-auto " alt="..."></a>
             <div class="card-body">
-              <h5 class="card-title">Hollow Knight</h5>
-              <p class="card-text">$8.000CLP</p>
+              <h5 class="card-title">BICICLETA GT 20 SLAMMER</h5>
+              <p class="card-text">$299.990CLP</p>
               <a class="btn btn-primary" href="{%url 'hk'%}" role="button">Comprar</a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <a href="{%url 'ktn' %}"><img src="{% static 'img/img/katanazero.jpg'%}" class="img-thumbnail w-75 m-auto" alt="..."></a>
+            <a href="{%url 'ktn' %}"><img src="{% static 'img/Bici3.png'%}" class="img-thumbnail w-auto m-auto" alt="..."></a>
             <div class="card-body">
-              <h5 class="card-title">Katana Zero</h5>
-              <p class="card-text">$5.500CLP</p>
+              <h5 class="card-title">BICICLETA INFANTIL</h5>
+              <p class="card-text">$75.990CLP</p>
               <a class="btn btn-primary" href="{%url 'ktn'%}" role="button">Comprar</a>
             </div>
           </div>
