--- a/DjangoClase-main/newPage/templates/pages/HK.html
+++ b/DjangoClase-main/newPage/templates/pages/HK.html
@@ -57,13 +57,10 @@
     <br />
     <div class="container3">
       <div class="row">
-        <div class="col-3">
-          <img src="{%static 'img/img/hollow.jpg'%}" width="200" height="250" class="img-fluid" />
-        </div>
-        <div class="col-md-2">
-          <h2>Hollow Knight</h2>
-          <p>8.000clp</p>
-          <p2 style="text-align: center">Enfréntate a las profundidades de un reino olvidado.</p2>
+        <div class="col-6">
+          <br />
+          <h2>BICICLETA GT 20 SLAMMER</h2>
+          <p>299.990CLP</p>
           <br />
           <button class="btn btn-primary mt-3">Comprar</button>
         </div>
@@ -84,19 +81,19 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
-                  <img src="{%static 'img/img/hollow kcarrusel2.jpg'%}" class="d-block w-100 imagenesre4" alt="..." />
+                  <img src="{%static 'img/Bici2.png'%}" class="d-block w-100 imagenesre4" alt="..." />
                   <div class="carousel-caption d-none d-md-block"></div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
                   <img
-                    src="{%static 'img/img/hollowknightcarrusel.jpg'%}"
+                    src="{%static 'img/Bici2_2.png'%}"
                     class="d-block w-100 imagenesre4"
                     alt="..." />
                   <div class="carousel-caption d-none d-md-block"></div>
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="{%static 'img/img/hollowknightcarrusel3.jpg'%}"
+                    src="{%static 'img/Bici2_3.png'%}"
                     class="d-block w-100 imagenesre4"
                     alt="..." />
                   <div class="carousel-caption d-none d-md-block"></div>
@@ -113,13 +110,12 @@
     <div class="DescripcionRe4 col-2 col-md-9 text-center">
       <h2>Descripción</h2>
       <p>
-        Una rígida ruda con transmisión 1x10 y horquilla de 100mm, construida para subir tu nivel y desarrollar tu pasión por los senderos. Diseñada para las montañas, para cualquier cosa.
+        Ya sea en el barrio o en el skatepark, la Slammer es la perfecta primera bici. La geometría del cuadro es rápida y reactiva permitiendo una maniobrabilidad fácil mientras el joven rider desarrolla su fuerza. Con modernas carácteristicas de freestyle como un plato de 25T, cassette de 9T y ruedas grandes, la Slammer te permite unirte a tus amigos con la mejor relación precio calidad.        </p>
       </p>
       <button class="btn btn-primary mt-3 mx-auto" id="ver-mas" onclick="verMas()">Ver más</button>
       <div class="collapse" id="expand-description">
         <p>
-          Esta bicicleta está lista para enfrentar cualquier terreno y desafío que se presente. Con su transmisión de 1x10, tendrás un amplio rango de cambios para adaptarte a diferentes condiciones. La horquilla de 100mm te brinda la suspensión necesaria para absorber los impactos y mantener la tracción en los senderos más difíciles. No importa si eres un ciclista experimentado o estás empezando en el mundo del mountain bike, esta bicicleta te acompañará en todas tus aventuras.
-        </p>
+          La bicicleta Slammer es la elección perfecta para aquellos que buscan su primera bicicleta en el mundo del ciclismo. Con una geometría ágil y reactiva, esta bicicleta ofrece una maniobrabilidad fácil y rápida, ideal para que los jóvenes riders desarrollen su fuerza y destreza. Equipada con características modernas de estilo libre, como un plato de 25T, cassette de 9T y ruedas grandes, la Slammer les permite unirse a sus amigos y disfrutar de la mejor relación calidad-precio. Ya sea en el barrio o en el skatepark, la Slammer garantiza diversión y rendimiento en cada salida.        </p>
         <button class="btn btn-primary mt-3 mx-auto" id="ver-menos" onclick="verMenos()">Ver menos</button>
       </div>
     </div>
